--- a/kadaiBstart.html
+++ b/kadaiBstart.html
@@ -42,10 +42,10 @@
       
       div.addEventListener('click', () => {
         if (i === winner) {
-          div.textContent = 'Win!';
+          div.textContent = '大吉!';
           div.classList.add('win');
         } else {
-          div.textContent = 'Lose!';
+          div.textContent = '中吉!';
           div.classList.add('lose');
         }
       });
