--- a/kadaiBstart2.html
+++ b/kadaiBstart2.html
@@ -36,6 +36,7 @@
     const num = 5;
     const winner = Math.floor(Math.random() * num); // 0 - 4
 
+    for (let j = 0; j < num; j++) {
     for (let i = 0; i < num; i++) {
       const div = document.createElement('div');
       div.classList.add('box');
@@ -51,6 +52,7 @@
       });
 
       document.body.appendChild(div);
+    }
     }
   </script>
 </body>
