--- a/kadaiBstart2.html
+++ b/kadaiBstart2.html
@@ -33,18 +33,35 @@
   <script>
     'use strict';
 
-    const num = 5;
+    const num = 20;
+    const num1 = 5;
+    const num2 = 10;
+    const num3 = 15;
+    const num4 = 20;
     const winner = Math.floor(Math.random() * num); // 0 - 4
+    const winner1 = Math.floor(Math.random() * num1); // 0 - 4
+    const winner2 = Math.floor(Math.random() * num2); // 0 - 4
+    const winner3 = Math.floor(Math.random() * num3); // 0 - 4
+    const winner4 = Math.floor(Math.random() * num4); // 0 - 4
 
-    for (let j = 0; j < num; j++) {
+//    for (let j = 0; j < num; j++) {
     for (let i = 0; i < num; i++) {
       const div = document.createElement('div');
       div.classList.add('box');
       
       div.addEventListener('click', () => {
-        if (i === winner) {
+        if (i <= winner1) {
           div.textContent = 'Win!';
           div.classList.add('win');
+        } else if((i > winner1)and(i <= winner2)){
+          div.textContent = 'Lose!';
+          div.classList.add('lose');
+        } else if((i > winner2)and(i <= winner3)){
+          div.textContent = 'Lose!';
+          div.classList.add('lose');
+        } else if((i > winner3)and(i <= winner4)){
+          div.textContent = 'Lose!';
+          div.classList.add('lose');
         } else {
           div.textContent = 'Lose!';
           div.classList.add('lose');
@@ -53,7 +70,7 @@
 
       document.body.appendChild(div);
     }
-    }
+//    }
   </script>
 </body>
 </html>
