--- a/kadaiBstart2.html
+++ b/kadaiBstart2.html
@@ -53,13 +53,13 @@
         if (i <= winner1) {
           div.textContent = 'Win!';
           div.classList.add('win');
-        } else if((i > winner1)and(i <= winner2)){
+        } else if((i > winner1)&&(i <= winner2)){
           div.textContent = 'Lose!';
           div.classList.add('lose');
-        } else if((i > winner2)and(i <= winner3)){
+        } else if((i > winner2)&&(i <= winner3)){
           div.textContent = 'Lose!';
           div.classList.add('lose');
-        } else if((i > winner3)and(i <= winner4)){
+        } else if((i > winner3)&&(i <= winner4)){
           div.textContent = 'Lose!';
           div.classList.add('lose');
         } else {
