--- a/kadaiBstart2.html
+++ b/kadaiBstart2.html
@@ -54,16 +54,16 @@
           div.textContent = 'Win!';
           div.classList.add('win');
         } else if((i > winner1)&&(i <= winner2)){
-          div.textContent = 'Lose!';
+          div.textContent = 'Lose1!';
           div.classList.add('lose');
         } else if((i > winner2)&&(i <= winner3)){
-          div.textContent = 'Lose!';
+          div.textContent = 'Lose2!';
           div.classList.add('lose');
         } else if((i > winner3)&&(i <= winner4)){
-          div.textContent = 'Lose!';
+          div.textContent = 'Lose3!';
           div.classList.add('lose');
         } else {
-          div.textContent = 'Lose!';
+          div.textContent = 'Lose4!';
           div.classList.add('lose');
         }
       });
