--- a/kadaiBstart2.html
+++ b/kadaiBstart2.html
@@ -51,16 +51,16 @@
       
       div.addEventListener('click', () => {
         if (i <= winner1) {
-          div.textContent = 'Win!';
+          div.textContent = '大吉!';
           div.classList.add('win');
         } else if((i > winner1)&&(i <= winner2)){
-          div.textContent = 'Lose1!';
+          div.textContent = '中吉!';
           div.classList.add('lose');
         } else if((i > winner2)&&(i <= winner3)){
-          div.textContent = 'Lose2!';
+          div.textContent = '小吉!';
           div.classList.add('lose');
         } else if((i > winner3)&&(i <= winner4)){
-          div.textContent = 'Lose3!';
+          div.textContent = '末吉!';
           div.classList.add('lose');
         } else {
           div.textContent = 'Lose4!';
