--- a/kadaiBstart2.html
+++ b/kadaiBstart2.html
@@ -59,11 +59,8 @@
         } else if((i > winner2)&&(i <= winner3)){
           div.textContent = '小吉!';
           div.classList.add('lose');
-        } else if((i > winner3)&&(i <= winner4)){
-          div.textContent = '末吉!';
-          div.classList.add('lose');
         } else {
-          div.textContent = 'Lose4!';
+          div.textContent = '凶!';
           div.classList.add('lose');
         }
       });
