--- a/kadaiBstart2.html
+++ b/kadaiBstart2.html
@@ -50,13 +50,13 @@
       div.classList.add('box');
       
       div.addEventListener('click', () => {
-        if (i <= winner1) {
+        if (i === winner1) {
           div.textContent = '大吉!';
           div.classList.add('win');
-        } else if((i > winner1)&&(i <= winner2)){
+        } else if((i === winner2)){
           div.textContent = '中吉!';
           div.classList.add('lose');
-        } else if((i > winner2)&&(i <= winner3)){
+        } else if((i === winner3)){
           div.textContent = '小吉!';
           div.classList.add('lose');
         } else {
