--- a/kadaiBstart2.html
+++ b/kadaiBstart2.html
@@ -35,8 +35,9 @@
 
     const num = 10;
     const num1 = 20;
-    const winner = Math.floor(Math.random() * num); // 0 - 4
-    const winner1 = Math.floor(Math.random() * num1); // 0 - 4
+//    const winner = Math.floor(Math.random() * num); // 0 - 4
+//    const winner = Math.floor(Math.random() * num1); // 0 - 4
+    var winner; // 0 - 4
 
 //    for (let j = 0; j < num; j++) {
     for (let i = 0; i < num; i++) {
