--- a/kadaiBstart2.html
+++ b/kadaiBstart2.html
@@ -59,6 +59,8 @@
           div.textContent = '凶! ';
           div.classList.add('lose');
         }
+        console.log('クリックされました！');
+        console.log(winner);
       });
 
       document.body.appendChild(div);
