--- a/kadaiBstart2.html
+++ b/kadaiBstart2.html
@@ -38,6 +38,9 @@
 //    const winner = Math.floor(Math.random() * num); // 0 - 4
 //    const winner = Math.floor(Math.random() * num1); // 0 - 4
     var winner; // 0 - 4
+    for(var i=0; i<10; i++) {
+      console.log(Math.random());
+    }
 
 //    for (let j = 0; j < num; j++) {
     for (let i = 0; i < num; i++) {
