--- a/kadaiBstart2.html
+++ b/kadaiBstart2.html
@@ -47,7 +47,9 @@
       const div = document.createElement('div');
       div.classList.add('box');
       
+      console.log(Math.random());
       winner = Math.floor(Math.random() * num1); // 0 - 4
+      console.log(winner);
       div.addEventListener('click', () => {
         if (winner < 5) {
           div.textContent = '大吉!';
@@ -63,7 +65,6 @@
           div.classList.add('lose');
         }
         console.log('クリックされました！');
-        console.log(winner);
       });
 
       document.body.appendChild(div);
