--- a/kadaiBstart2.html
+++ b/kadaiBstart2.html
@@ -69,6 +69,8 @@
         }
       });
 
+      console.log(winner);
+      console.log('クリックされました１！');
       document.body.appendChild(div);
     }
 //    }
