--- a/kadaiBstart2.html
+++ b/kadaiBstart2.html
@@ -28,6 +28,11 @@
       border-radius: 50%;
       transform: rotate(360deg);
     }
+    .win3 {
+      background: green;
+      border-radius: 50%;
+      transform: rotate(360deg);
+    }
     .lose {
       transform: scale(0.9);
     }
