--- a/kadaiBstart2.html
+++ b/kadaiBstart2.html
@@ -29,7 +29,7 @@
       transform: rotate(360deg);
     }
     .win3 {
-      background: green;
+      background: orange;
       border-radius: 50%;
       transform: rotate(360deg);
     }
